--- a/carclub/index.html
+++ b/carclub/index.html
@@ -146,10 +146,30 @@
         </div>
         <div class="feature-box">
             <div class="features">
-                <h1>Experienced Staff</h1>
+                <h1>Skilled Labor</h1>
                 <div class="features-desc">
                     <div class="feature-icon">
-                        <i class="fa fa-shield" aria-hidden="true"></i>
+                        <i class="fa fa-shield"></i>
+                    </div>
+                    <div class="feature-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus laudantium accusamus,
+                            expedita sed</p>
+                    </div>
+                </div>
+                <h1>Book Online</h1>
+                <div class="features-desc">
+                    <div class="feature-icon">
+                        <i class="fa fa-check-square-o"></i>
+                    </div>
+                    <div class="feature-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus laudantium accusamus,
+                            expedita sed</p>
+                    </div>
+                </div>
+                <h1>Affordable Prices</h1>
+                <div class="features-desc">
+                    <div class="feature-icon">
+                        <i class="fa fa-inr"></i>
                     </div>
                     <div class="feature-text">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus laudantium accusamus,
