--- a/carclub/index.html
+++ b/carclub/index.html
@@ -24,7 +24,7 @@
             <div class="logo"></div>
             <div class="nav-options">
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a class="active" href="#">Home</a></li>
                     <li><a href="#">Services</a></li>
                     <li><a href="#">Features</a></li>
                     <li><a href="#">Contact us</a></li>
