--- a/carclub/index.html
+++ b/carclub/index.html
@@ -18,20 +18,18 @@
 </head>
 
 <body>
-    <header>
-        <div class="navbar">
-            <div class="logo"></div>
-            <div class="nav-options">
-                <ul>
-                    <li><a class="active" href="#">Home</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Features</a></li>
-                    <li><a href="#">Contact us</a></li>
-                </ul>
-            </div>
+    <div class="navbar">
+        <div class="logo"></div>
+        <div class="nav-options">
+            <ul>
+                <li><a class="active" href="#">Home</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Features</a></li>
+                <li><a href="#">Contact us</a></li>
+            </ul>
         </div>
-    </header>
-    <!-- <main> -->
+    </div>
+
     <div class="banner">
         <div class="content">
             <h1>Welcome to CarClub</h1>
@@ -42,7 +40,6 @@
             </div>
         </div>
     </div>
-    <!-- </main> -->
 
     <section id="services">
         <div class="title-text">
@@ -179,6 +176,33 @@
             <div class="features-img">
                 <img src="./images/CarClubLogo.png" alt="">
             </div>
+        </div>
+    </section>
+
+    <section id="footer">
+        <div class="title-text">
+            <p>CONTACT</p>
+            <h1>Get In Touch</h1>
+        </div>
+        <div class="footer-row">
+            <div class="footer-left">
+                <h1>Service Hours</h1>
+                <p><i class="fa fa-clock-o"></i>Monday to Friday - 9am to 9pm</p>
+                <p><i class="fa fa-clock-o"></i>Saturday and Sunday - 9am to 9pm</p>
+            </div>
+            <div class="footer-right">
+                <h1>Get In Touch</h1>
+                <p>30 abc Colony, XYZ city IN<i class="fa fa-map-marker"></i></p>
+                <p>example@website.com<i class="fa fa-paper-plane"></i></p>
+                <p>+01 1234567890<i class="fa fa-phone"></i></p>
+            </div>
+        </div>
+
+        <div class="social-links">
+            <i class="fa fa-facebook"></i>
+            <i class="fa fa-instagram"></i>
+            <i class="fa fa-linkedin"></i>
+            <i class="fa fa-twitter"></i>
         </div>
     </section>
 </body>
