--- a/carclub/index.html
+++ b/carclub/index.html
@@ -193,9 +193,9 @@
             </div>
             <div class="footer-right">
                 <h1>Get In Touch</h1>
-                <p>30 abc Colony, XYZ city IN<i class="fa fa-map-marker"></i></p>
-                <p>example@website.com<i class="fa fa-paper-plane"></i></p>
-                <p>+01 1234567890<i class="fa fa-phone"></i></p>
+                <p><i class="fa fa-map-marker"></i>30 abc Colony, XYZ city IN</p>
+                <p><i class="fa fa-at"></i>example@website.com</p>
+                <p><i class="fa fa-phone"></i>+01 1234567890</p>
             </div>
         </div>
 
