--- a/carclub/index.html
+++ b/carclub/index.html
@@ -201,9 +201,9 @@
         </div>
 
         <div class="social-links">
-            <i class="fa fa-facebook"></i>
-            <i class="fa fa-instagram"></i>
-            <i class="fa fa-linkedin"></i>
+            <a href="https://www.facebook.com/profile.php?id=61554319641067&mibextid=ZbWKwL" target="_blank"><i class="fa fa-facebook"></i></a>
+            <a href="https://instagram.com/carclub.services?igshid=M2RkZGJiMzhjOQ==" target="_blank"><i class="fa fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/company/cleaning-service-51/about/?viewAsMember=true" target="_blank"><i class="fa fa-linkedin"></i></a>
             <i class="fa fa-twitter"></i>
         </div>
     </section>
