--- a/carclub/index.html
+++ b/carclub/index.html
@@ -13,8 +13,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/96d77f0c36.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
 </head>
 
@@ -244,7 +244,7 @@
             const isOpen = dropDownMenu.classList.contains('open')
 
             toggleBtnIcon.classList = isOpen
-            ? 'fa fa-bars'
+            ? 'fa fa-xmark'
             : 'fa fa-bars'
         }
     </script>
