--- a/carclub/index.html
+++ b/carclub/index.html
@@ -40,7 +40,7 @@
 
     <section id="banner">
         <div class="content">
-            <h1>Welcome to CarClub</h1>
+            <h1>Welcome To CARCLUB</h1>
             <p>Have your car cleaned effortlessly at your doorstep by our trained professionals!<br>Enjoy your
                 pristine vehicle without even having to leaving your home!</p>
             <div>
@@ -59,7 +59,7 @@
                 <img src="./images/microfibre-cleaning.jpg" alt="">
                 <div class="overlay"></div>
                 <div class="service-disc">
-                    <h3>Cleaning</h3>
+                    <h3>CLEANING</h3>
                     <hr>
                     <p>Discover our professional car cleaning service: meticulous interior and exterior care, expert
                         detailing, and a showroom finish for your vehicle's ultimate shine</p>
@@ -69,7 +69,7 @@
                 <img src="./images/dry-washing-service.jpg" alt="">
                 <div class="overlay"></div>
                 <div class="service-disc">
-                    <h3>Dry Washing</h3>
+                    <h3>DRY WASHING</h3>
                     <hr>
                     <p>Experience the effortless brilliance of our dry washing service—no water needed. Revel in a
                         showroom-worthy finish that rejuvenates your car's appearance. Book now to treat your vehicle to
@@ -80,7 +80,7 @@
                 <img src="./images/car-vaccuming.jpg" alt="">
                 <div class="overlay"></div>
                 <div class="service-disc">
-                    <h3>Vaccuming</h3>
+                    <h3>VACCUMING</h3>
                     <hr>
                     <p>Revitalize your ride with our meticulous car vacuuming service. Our experts ensure a spotless
                         interior, removing dust, debris, and dirt, leaving your car refreshed and clean.</p>
@@ -90,7 +90,7 @@
                 <img src="./images/interior-polishing.jpg" alt="">
                 <div class="overlay"></div>
                 <div class="service-disc">
-                    <h3>Interior Polishing</h3>
+                    <h3>INTERIOR POLISHING</h3>
                     <hr>
                     <p>Transform your car's interior with our meticulous polishing service, encompassing detailed
                         dashboard care. Our skilled team restores every surface to a flawless, showroom-quality finish.
@@ -101,7 +101,7 @@
                 <img src="./images/car-mechanic-changing-wheels-car.jpg" alt="">
                 <div class="overlay"></div>
                 <div class="service-disc">
-                    <h3>Wheel Care</h3>
+                    <h3>WHEEL CARE</h3>
                     <hr>
                     <p>Transform your wheels with our comprehensive wheel care service. From expert cleaning to tire
                         shining, we ensure your wheels gleam with a renewed shine, guaranteeing both aesthetic appeal
@@ -112,7 +112,7 @@
                 <img src="./images/young-man-washing-car-carwash-station-outdoor.jpg" alt="">
                 <div class="overlay"></div>
                 <div class="service-disc">
-                    <h3>Deodorization</h3>
+                    <h3>DEODORIZATION</h3>
                     <hr>
                     <p>Eliminate odors with our thorough deodorization service. Say goodbye to unpleasant smells,
                         leaving your vehicle fresh and inviting.</p>
@@ -122,7 +122,7 @@
                 <img src="./images/air-pressure.jpg" alt="">
                 <div class="overlay"></div>
                 <div class="service-disc">
-                    <h3>Air Pressure</h3>
+                    <h3>AIR PRESSURE</h3>
                     <hr>
                     <p>Optimize performance and safety with our precise air pressure service, ensuring your tires meet
                         recommended standards for a smooth and safe ride.</p>
@@ -132,7 +132,7 @@
                 <img src="./images/sanitization.jpg" alt="">
                 <div class="overlay"></div>
                 <div class="service-disc">
-                    <h3>Sanitization</h3>
+                    <h3>SANITIZATION</h3>
                     <hr>
                     <p>Eliminate odors with our professional deodorization service, ensuring a fresh and inviting
                         interior.
@@ -194,15 +194,15 @@
         </div>
         <div class="footer-row">
             <div class="footer-left">
-                <h1>Service Hours</h1>
-                <p><i class="fa fa-clock-o"></i>Monday to Friday - 9am to 9pm</p>
-                <p><i class="fa fa-clock-o"></i>Saturday and Sunday - 9am to 9pm</p>
+                <h1>Our Service Hours</h1>
+                <p><i class="fa fa-clock-o"></i>As per customer's convenience</p>
+                <!-- <p><i class="fa fa-clock-o"></i>Saturday and Sunday - 9am to 9pm</p> -->
             </div>
             <div class="footer-right">
-                <h1>Get In Touch</h1>
-                <p><i class="fa fa-map-marker"></i>30 abc Colony, XYZ city IN</p>
-                <p><i class="fa fa-at"></i>example@website.com</p>
-                <p><i class="fa fa-phone"></i>+01 1234567890</p>
+                <h1>Need help? Contact us!</h1>
+                <!-- <p><i class="fa fa-map-marker"></i>30 abc Colony, XYZ city IN</p> -->
+                <p><i class="fa fa-at"></i>carclub.services.jic@gmail.com</p>
+                <p><i class="fa fa-phone"></i>+91 9660666546</p>
             </div>
         </div>
 
