--- a/carclub/index.html
+++ b/carclub/index.html
@@ -156,8 +156,8 @@
                         <i class="fa fa-shield"></i>
                     </div>
                     <div class="feature-text">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus laudantium accusamus,
-                            expedita sed</p>
+                        <p>Our skilled team brings professional expertise to your doorstep car cleaning service,
+                            ensuring meticulous cleaning and delighted customers with every visit.</p>
                     </div>
                 </div>
                 <h1>Book Online</h1>
@@ -166,8 +166,8 @@
                         <i class="fa fa-check-square-o"></i>
                     </div>
                     <div class="feature-text">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus laudantium accusamus,
-                            expedita sed</p>
+                        <p>Book our doorstep car cleaning service effortlessly, scheduling tailored sessions in moments
+                            for ultimate convenience.</p>
                     </div>
                 </div>
                 <h1>Affordable Prices</h1>
@@ -176,8 +176,8 @@
                         <i class="fa fa-inr"></i>
                     </div>
                     <div class="feature-text">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus laudantium accusamus,
-                            expedita sed</p>
+                        <p>Enjoy affordability without compromising excellence with our service packages, making premium
+                            car care accessible to all.</p>
                     </div>
                 </div>
             </div>
@@ -236,13 +236,13 @@
         const toggleBtnIcon = document.querySelector('.toggle-btn i')
         const dropDownMenu = document.querySelector('.dropdown-menu')
 
-        toggleBtn.onclick = function() {
+        toggleBtn.onclick = function () {
             dropDownMenu.classList.toggle('open')
             const isOpen = dropDownMenu.classList.contains('open')
 
             toggleBtnIcon.classList = isOpen
-            ? 'fa fa-xmark'
-            : 'fa fa-bars'
+                ? 'fa fa-xmark'
+                : 'fa fa-bars'
         }
     </script>
 
