--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>CarClub Subscription Tracker</h1>
+    <h1>CarDho Subscription Tracker</h1>
     <form id="subscription-form">
         <label for="mobile-number">Enter Mobile Number:</label>
         <input type="number" id="mobile-number" placeholder="Phone Number" required>
